[package]
name = "prescription-reminder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.30"
futures = "0.3.28"
mongodb = "2.6.1"
serde = "1.0.188"
tokio = { version = "1.28.0", features = ["full"] }
